--- a/templates/register.html
+++ b/templates/register.html
@@ -25,6 +25,8 @@
                 </div>
                 <input type="text" class="rounded-full shadow mt-5 w-2/3 p-2 px-4 focus:outline-none "
                         placeholder="email" name="email">
+                <input type="text" class="rounded-full shadow mt-5 w-2/3 p-2 px-4 focus:outline-none "
+                        placeholder="identify id" name="card_id">
                 <div class="relative w-2/3 flex items-center mt-5" x-data="{ show: true }">
                     <input :type="show ? 'password' : 'text'" id="password1" name="password" class="rounded-full shadow w-full p-2 px-4 focus:outline-none " placeholder="password">
                     <div class="absolute top- right-0 pr-3 flex items-center text-sm leading-5">
